feat: add certificate description field
